# SentimentAnalysis_3

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
apps/api/: README.md
apps/web/: README.md  streamlit_app.py  streamlit_presenter.py  streamlit_styles.py
assets/example_runs/: fallback_mysterious_ambiguous_story.json  provider_heartwarming_dog_story.json  provider_heartwarming_dog_story_strict.json
docs/00_overview/: product-vision.md
docs/01_planning/: functional-requirements.md  problem-definition.md
docs/02_architecture/: data-contracts.md  system-architecture.md
docs/03_product/: ui-information-architecture.md
docs/04_engineering/: code-structure.md  testing-strategy.md
docs/05_decisions/: ADR-001-monorepo-structure.md  ADR-002-research-grounded-storytelling-pipeline.md
docs/06_handoffs/: implementation-roadmap.md  open-questions.md
logs/: README.md
logs/2026-04-08_docs-design-setup/: 00-status-board.md  01-plan.md  02-resolved-items.md  03-change-log.md  04-open-risks.md  05-sources.md  06-context-brief.md  07-loop-automation-note.md
logs/2026-04-08_research-architecture/: 00-status-board.md  01-plan.md  02-resolved-items.md  03-change-log.md  04-open-risks.md  05-sources.md  06-context-brief.md
logs/2026-04-08_submission-mvp/: 00-status-board.md  01-plan.md  (+5 more)
submission/: README_submission.md  __init__.py  app.py  controller.py  presentation.py  session_state.py  styles.py
submission_package/: README.md  실습3_조수빈.ipynb
tests/: README.md
(+41 files in other folders)
